--- a/index.css
+++ b/index.css
@@ -8,22 +8,36 @@ html, body {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 50vh;
+    height: 90vh;
     width: 90vw;
     position: relative;
     top: 50%;
     left: 50%;
     margin-left: -45vw;
-    margin-top: -25vh;
+    margin-top: -45vh;
 }
 button {
-    background-color: cadetblue;
-    color: white;
+    background-color: palegoldenrod;
     font-size: 2em;
     cursor: pointer;
     border: none;
+    padding: 1em;
+}
+#notes button {
+    padding: 0;
+    color: black;
+    background-color: white;
+    border: darkgrey 1px solid;
+}
+#notes button:active {
+    background-color: grey;
 }
 @media(orientation: portrait){
+    #container {
+        height: 100vh;
+        top: 0;
+        margin-top: 10px;
+    }
     button {
         font-size: 4em;
     }
